[package]
name = "oglp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.14.0", features = ["derive"]}
cgmath = "0.18.0"
gl = "0.14.0"
glfw = "0.52.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
